--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
                     <div class="alert alert-danger">Some fields are missing</div>
 
                     <div class="row align-items-start">
-                        <div class="col-5 pb-3">
+                        <div class="col-sm-12 col-md-5 pb-3">
                             <label for="card" class="form-label">Card #</label>
                             <input class="form-control" placeholder="XXXXXXXXXXXXXXXX" type="text">
                         </div>
-                        <div class="col-3 pb-3">
+                        <div class="col-sm-12 col-md-3 pb-3">
                             <label for="cvc" class="form-label">CVC #</label>
                             <input type="text" class="form-control" placeholder="0000">
                         </div>
-                        <div class="col-4 pb-3">
+                        <div class="col-sm-12 col-md-4 pb-3">
                             <label for="amount" class="form-label">Amount</label>
                             <div class="input-group mb-3">
                                 <span><strong>$</strong></span>
@@ -44,22 +44,22 @@
                     </div>
 
                     <div class="row align-items-start">
-                        <div class="col-6 pb-3">
+                        <div class="col-sm-12 col-md-6 pb-3">
                             <label for="firstName" class="form-label">First Name</label>
                             <input class="form-control" type="text">
                         </div>
-                        <div class="col-6 pb-3">
+                        <div class="col-sm-12 col-md-6 pb-3">
                             <label for="lastName" class="form-label">Last Name</label>
                             <input class="form-control" type="text">
                         </div>
                     </div>
 
                     <div class="row align-items-start">
-                        <div class="col-6 pb-3">
+                        <div class="col-sm-12 col-md-6 pb-3">
                             <label for="city" class="form-label">City</label>
                             <input class="form-control" type="text">
                         </div>
-                        <div class="col-3 pb-3">
+                        <div class="col-sm-12 col-md-3 pb-3">
                             <label for="chooseState" class="form-label">State</label>
                             <select class="form-select" aria-label="Default select example">
                                 <option selected>Pick a state</option>
@@ -219,14 +219,14 @@
                                 </option>
                             </select>
                         </div>
-                        <div class="col-3 pb-3">
+                        <div class="col-sm-12 col-md-3 pb-3">
                             <label for="amount" class="form-label">Postal code</label>
                             <input class="form-control" type="text">
                         </div>
                     </div>
 
                     <div class="row align-items-start">
-                        <div class="col-md-6 ">
+                        <div class="col-sm-12 col-md-6 ">
                             <p for="weAccept">We accept:</p>
                             <div class="btn-group" data-toggle="buttons">
                                 <label class="btn btn-secondary">
@@ -248,7 +248,7 @@
                             </div>
                         </div>
 
-                        <div class="col-6 pb-3">
+                        <div class="col-sm-12 col-md-6 pb-3">
                             <label for="comment">Message</label>
                             <textarea class="form-control" rows="5" id="comment" name="text"></textarea>
                             <p class="fw-lighter" style="color: gray; font-size: small;">Add any notes here.</p>
