--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                     </div>
                 </div>
                 <div class="card-footer">
-                    <div class="float-end">
+                    <div class="d-flex justify-content-center justify-content-lg-end">
                         <button type="button" class="btn btn-secondary">Cancel</button>
                         <button type="submit" class="btn btn-primary">Send</button>
                     </div>
